--- a/src/WebApplication3/wwwroot/libs/rxjs/package.json
+++ b/src/WebApplication3/wwwroot/libs/rxjs/package.json
@@ -2,7 +2,7 @@
   "_args": [
     [
       "rxjs@5.0.0-beta.6",
-      "c:\\users\\b\\documents\\visual studio 2015\\Projects\\WebApplication3\\src\\WebApplication3"
+      "C:\\Users\\B\\documents\\visual studio 2015\\Projects\\WebApplication3\\src\\WebApplication3"
     ]
   ],
   "_from": "rxjs@5.0.0-beta.6",
@@ -29,14 +29,13 @@
     "type": "version"
   },
   "_requiredBy": [
-    "/",
-    "/angular2-in-memory-web-api"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/rxjs/-/rxjs-5.0.0-beta.6.tgz",
   "_shasum": "cb6dc46d6ddfedfeefc9b15dafd09c34a4370d23",
   "_shrinkwrap": null,
   "_spec": "rxjs@5.0.0-beta.6",
-  "_where": "c:\\users\\b\\documents\\visual studio 2015\\Projects\\WebApplication3\\src\\WebApplication3",
+  "_where": "C:\\Users\\B\\documents\\visual studio 2015\\Projects\\WebApplication3\\src\\WebApplication3",
   "author": {
     "email": "blesh@netflix.com",
     "name": "Ben Lesh"
